Project

General

Profile

Actions

Bug #38214

closed

unable to cancel reshard operations for buckets with tenants

Added by Ed Fisher about 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

http://tracker.ceph.com/issues/22046 made it so you could successfully submit a reshard operation for a tenant's bucket, but they can't be cancelled. Per https://github.com/ceph/ceph/pull/18811#issuecomment-378517787 --

root@osdnode03:~# radosgw-admin reshard cancel --uid='DB0220$elasticsearch' --tenant=DB0220 --bucket=backups 
Error in getting bucket backups: (2) No such file or directory
2018-04-04 10:07:03.905049 7f105ee0fcc0 -1 ERROR: failed to get entry from reshard log, oid=reshard.0000000010 tenant= bucket=backups

I can verify that removing the comment on this line: https://github.com/ceph/ceph/blob/de98f2e0d9783791436755246a3a12ce94ef088d/src/rgw/rgw_admin.cc#L6349 and rebuilding radosgw-admin allows the reshard operation to be successfully cancelled, but I haven't tested the change to see if it causes issues on buckets without tenants.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #39016: luminous: unable to cancel reshard operations for buckets with tenantsResolvedNathan CutlerActions
Copied to rgw - Backport #39017: mimic: unable to cancel reshard operations for buckets with tenantsResolvedPrashant DActions
Copied to rgw - Backport #39018: nautilus: unable to cancel reshard operations for buckets with tenantsResolvedPrashant DActions
Actions #1

Updated by Abhishek Lekshmanan about 5 years ago

  • Assignee set to Abhishek Lekshmanan
Actions #2

Updated by Abhishek Lekshmanan about 5 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 26887
Actions #3

Updated by Abhishek Lekshmanan about 5 years ago

  • Status changed from Fix Under Review to 17
Actions #4

Updated by Abhishek Lekshmanan about 5 years ago

  • Backport set to nautilus, mimic, luminous
Actions #5

Updated by Abhishek Lekshmanan about 5 years ago

  • Status changed from 17 to 7
Actions #6

Updated by Abhishek Lekshmanan about 5 years ago

  • Status changed from 7 to Pending Backport
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39016: luminous: unable to cancel reshard operations for buckets with tenants added
Actions #8

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39017: mimic: unable to cancel reshard operations for buckets with tenants added
Actions #9

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39018: nautilus: unable to cancel reshard operations for buckets with tenants added
Actions #10

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF